--- a/SWC_youtube_project/manifest.json
+++ b/SWC_youtube_project/manifest.json
@@ -1,5 +1,5 @@
 {
-  "generatedAt": "2025-09-05T17:13:51.034Z",
+  "generatedAt": "2025-09-07T14:23:20.549Z",
   "characters": [
     {
       "image": "./SWC_youtube_project/citrus.png",
@@ -14,6 +14,11 @@
           "title": ""
         }
       ]
+    },
+    {
+      "image": "./SWC_youtube_project/kaori.png",
+      "alt": "kaori",
+      "videos": []
     },
     {
       "image": "./SWC_youtube_project/kaoru.png",
@@ -265,6 +270,11 @@
           "title": ""
         }
       ]
+    },
+    {
+      "image": "./SWC_youtube_project/けんすうスピークロゴ.png",
+      "alt": "けんすうスピークロゴ",
+      "videos": []
     }
   ]
 }
