feat: YouTube動画の追加 (mottyan_2, Ryotaro)

--- a/SWC_youtube_project/manifest.json
+++ b/SWC_youtube_project/manifest.json
@@ -1,5 +1,5 @@
 {
-  "generatedAt": "2025-11-27T16:17:17.938Z",
+  "generatedAt": "2025-12-28T02:30:33.735Z",
   "characters": [
     {
       "image": "./SWC_youtube_project/citrus.png",
@@ -155,6 +155,10 @@
         {
           "id": "TFlU-lslIQ0",
           "title": ""
+        },
+        {
+          "id": "UVB-7ydaDbw",
+          "title": ""
         }
       ]
     },
@@ -206,6 +210,10 @@
         },
         {
           "id": "vfIhLImt5Yw",
+          "title": ""
+        },
+        {
+          "id": "zBO1RB78fuA",
           "title": ""
         }
       ]
